--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.2.1+2
+version: 1.2.1+3
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -37,10 +37,11 @@ dependencies:
   http:
   geolocator: ^9.0.2
   flutter_qiblah: ^2.1.0
-  permission_handler: ^10.2.0
   flutter_staggered_grid_view: ^0.4.0
   rename: ^2.1.1
-  location:
+  flutter_local_notifications:
+  workmanager:
+  flutter_svg: ^0.21.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
